# TestHook

./: build.gradle  settings.gradle
andfix/: build.gradle
andfix/src/androidTest/java/com/liuy/andfix/: ExampleInstrumentedTest.java
andfix/src/main/: AndroidManifest.xml
andfix/src/main/res/values/: strings.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
hotfixhook/: build.gradle
hotfixhook/src/main/: AndroidManifest.xml
hotfixhook/src/main/res/layout/: activity_main.xml
hotfixhook/src/main/res/values/: strings.xml
tinker/: CMakeLists.txt  build.gradle
tinker/src/androidTest/java/com/liuy/tinker/: ExampleInstrumentedTest.java
tinker/src/main/: AndroidManifest.xml
tinker/src/main/cpp/: NativeString.cpp  android_log.h  com_liuy_tinker_NativeJni.h
tinker/src/main/java/com/liuy/tinker/: BaseBuildInfo.java  BuildInfo.java  MainActivity.java  MyApplicatoin.java  NativeJni.java  TinkerApplicationLike.java
tinker/src/main/java/com/liuy/tinker/tinkerutil/Log/: MyLogImp.java
tinker/src/main/java/com/liuy/tinker/tinkerutil/crash/: SampleUncaughtExceptionHandler.java
tinker/src/main/java/com/liuy/tinker/tinkerutil/reporter/: SampleLoadReporter.java  SamplePatchListener.java  SamplePatchReporter.java  SampleTinkerReport.java
tinker/src/main/java/com/liuy/tinker/tinkerutil/service/: SampleResultService.java
tinker/src/main/java/com/liuy/tinker/tinkerutil/utils/: TinkerManager.java  TinkerUtils.java
tinker/src/test/java/com/liuy/tinker/: ExampleUnitTest.java
(+29 files in other folders)
